<resources>
    <string name="app_name">Magles</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmation_password">Confirm Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_national_id">National ID</string>
    <string name="prompt_birth_date">Birth Date</string>
    <string name="prompt_note">Note</string>
    <string name="prompt_department">Department</string>
    <string name="action_sign_in">Sign-In</string>
    <string name="action_register">Register</string>
    <string name="action_join_now">Join Now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_full_name">This full name is too short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_invalid_confirmation_password">Your password and confirmation password do not match</string>
    <string name="error_field_required">This field is required</string>

    <string name="menu_action_done">Done</string>

    <string name="label_retry">Retry</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_edit_profile">Edit Profile</string>

    <string name="more_log_out">Logout</string>
    <string name="more_edit_profile">Edit Profile</string>

    <string name="dialog_msg_loading">Loading...</string>

    <string name="empty_orders">There are no Orders added yet</string>

    <string name="order_owner">Owner</string>
    <string name="order_title">Title</string>
    <string name="order_date">Date</string>
    <string name="order_current_status">Current Status</string>
    <string name="order_content">Content</string>
    <string name="order_note">Note</string>
    <string name="order_history">History</string>

    <string name="message_general_error">Error happened! please, try again</string>
    <string name="message_error_connection">Please, check your connection!</string>
    <string name="message_edit_profile_complete">Edit Profile Complete Success</string>
    <string name="message_exit">Please click BACK again to exit</string>
    <string name="message_profile_image_max_size">Image max size is 2 MB!</string>
    <string name="error_invalid_username_or_password">The username or the password is incorrect, please try again</string>
    <string name="error_no_authorization">Unauthorized: Access is denied</string>
    <string name="error_service_unavailable">Service is unavailable now , please try again later</string>

    <string name="title_dialog_profile_image">Profile picture</string>
    <string-array name="profile_image_options">
        <item>Take a picture</item>
        <item>Choose a picture</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
