<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.azhar.university.magles.presentation.ui.activities.OrderDetailsActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hint_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_owner"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/normal_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hint_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_owner">

                <AutoCompleteTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_title"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/normal_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hint_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_title">

                <AutoCompleteTextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_date"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/normal_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hint_current_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_date">

                <AutoCompleteTextView
                    android:id="@+id/current_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_current_status"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/normal_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hint_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_current_status">

                <AutoCompleteTextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/normal_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hint_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_content">

                <AutoCompleteTextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/order_note"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/normal_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/hint_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/hint_note"
                android:layout_margin="@dimen/dimens_3dp"
                android:text="@string/order_history"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/normal_text_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/hint_history"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/item_order_history" />
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>
